@@ -1,3 +1,8 @@
+2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua/elem.scm, src/kahua/server.scm
+	  Fix wrong format of entity reference node(&, &:, &/).
+
 2007-04-24  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Add: check.scm
